--- a/modules/ROOT/partials/toolbar-button-ids/math-toolbar-buttons.adoc
+++ b/modules/ROOT/partials/toolbar-button-ids/math-toolbar-buttons.adoc
@@ -1,5 +1,5 @@
 [cols="1,3",options="header"]
 |===
 |Toolbar button identifier |Description
-|`+Math+` |Opens the math modal dialog.
+|`+math+` |Opens the math modal dialog.
 |===
