--- a/modules/ROOT/pages/math.adoc
+++ b/modules/ROOT/pages/math.adoc
@@ -19,7 +19,7 @@ liveDemo::{plugincode}[]
 
 == Basic setup
 
-To setup the {pluginname} plugin user-interface in the editor:
+To set up the {pluginname} plugin user interface in the editor:
 
 * add `+math+` to the plugins option in the editor configuration;
 
