--- a/modules/ROOT/partials/misc/supported-versions.adoc
+++ b/modules/ROOT/partials/misc/supported-versions.adoc
@@ -5,7 +5,7 @@ Supported versions of {productname}:
 
 [cols="^,^,^,^",options="header"]
 |===
-|Version |Release Date |End of Community Support |End of Enterprise Support
+|Version |Release Date |End of Community Support |End of Premium Support
 |7.0 |2024-03-20 |- |2025-09-20
 |6.8 |2023-12-06 |2024-10-31 |2025-06-06
 |6.7 |2023-09-13 |2023-12-06 |2025-03-13
