italicised  some text- Update modules/ROOT/pages/math.adoc

--- a/modules/ROOT/pages/math.adoc
+++ b/modules/ROOT/pages/math.adoc
@@ -62,8 +62,8 @@ To work with math elements, follow these steps:
 
 . The {pluginname} dialog wraps the inserted formula with a specific tag.
 . The choice of tag depends on the selected **text wrap** option in the dialog:
-.. For block (Text above and below) text wrap, the tag used is <tiny-math-block>.
-.. For inline (Inline with text) text wrap, the tag used is <tiny-math-inline>.
+.. For block (_Text above and below_) text wrap, the tag used is <tiny-math-block>.
+.. For inline (_Inline with text_) text wrap, the tag used is <tiny-math-inline>.
 
 
 [TIP]
