--- a/modules/ROOT/pages/math.adoc
+++ b/modules/ROOT/pages/math.adoc
@@ -56,18 +56,14 @@ To work with math elements, follow these steps:
 .. The {pluginname} equation is inserted into the editor, wrapped accordingly based on the chosen **text wrap.**
 +
 
-//
 
 **Formula Tag Wrapping**
 
 . The {pluginname} dialog wraps the inserted formula with a specific tag.
 . The choice of tag depends on the selected **text wrap** option in the dialog:
-.. For block (_Text above and below_) text wrap, the tag used is <tiny-math-block>.
-.. For inline (_Inline with text_) text wrap, the tag used is <tiny-math-inline>.
+.. For block (_Text above and below_) text wrap, the tag used is `<tiny-math-block>`.
+.. For inline (_Inline with text_) text wrap, the tag used is `<tiny-math-inline>`.
 
-
-[TIP]
-The formula is inserted at the last cursor position before the modal dialog was opened.
 
 [NOTE]
 Visit link:https://katex.org/docs/supported.html[https://katex.org/docs/supported^] for a comprehensive list of supported symbols and functions when inserting mathematical equations after selecting "Language (LaTeX)".
