--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -109,7 +109,7 @@ a|
 [.lead]
 xref:math.adoc[Math]
 
-Enable insertion of LaTeX and MathML.
+Enable insertion of math formulas using Latex or MathML markup.
 
 a|
 [.lead]
