DOC-2381: add new `Math` Plugin documentation for TinyMCE 7.1. (#3253)
* DOC-2381: add new Math plugin documentation for TinyMCE 7.1.

* Update modules/ROOT/examples/live-demos/math/index.js

* DOC-2381: update math demo, and removed examples of using equations.

* Update premium-plugins.adoc

Co-authored-by: spocke <spocke@moxiecode.com>

* Update math.adoc

Co-authored-by: spocke <spocke@moxiecode.com>

* Update math.adoc

Co-authored-by: spocke <spocke@moxiecode.com>

* Update math.adoc

Co-authored-by: spocke <spocke@moxiecode.com>

* Update math.adoc

Co-authored-by: spocke <spocke@moxiecode.com>

* Update modules/ROOT/pages/math.adoc

* DOC-2381: Demo update, and included examples of block vs inline.

* DOC-2381: Updated index.html for demo.

* Update modules/ROOT/examples/live-demos/math/index.html

* Update modules/ROOT/partials/misc/admon-requires-7.1v.adoc

Co-authored-by: Farzad Hayat <farzad.hayatbakhsh@tiny.cloud>

* add plugin to available-menu-items.adoc

* add plugin to available-toolbar-buttons.adoc

* add plugin to editor-command-identifiers.adoc

* add plugin to full-featured demo

* Update modules/ROOT/examples/live-demos/math/index.html

Co-authored-by: Farzad Hayat <farzad.hayatbakhsh@tiny.cloud>

* Update modules/ROOT/pages/math.adoc

Co-authored-by: Farzad Hayat <farzad.hayatbakhsh@tiny.cloud>

* Update modules/ROOT/pages/math.adoc

Co-authored-by: Farzad Hayat <farzad.hayatbakhsh@tiny.cloud>

* Update modules/ROOT/pages/math.adoc

Co-authored-by: Farzad Hayat <farzad.hayatbakhsh@tiny.cloud>

* Update modules/ROOT/pages/math.adoc

Co-authored-by: Farzad Hayat <farzad.hayatbakhsh@tiny.cloud>

* Update modules/ROOT/pages/math.adoc

Co-authored-by: Farzad Hayat <farzad.hayatbakhsh@tiny.cloud>

* Update modules/ROOT/partials/menu-item-ids/math-menu-items.adoc

Co-authored-by: Farzad Hayat <farzad.hayatbakhsh@tiny.cloud>

* Update modules/ROOT/partials/toolbar-button-ids/mat

--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -107,6 +107,12 @@ Validate links, as they are typed.
 
 a|
 [.lead]
+xref:math.adoc[Math]
+
+Enable insertion of math formulas using Latex or MathML markup.
+
+a|
+[.lead]
 xref:markdown.adoc[Markdown]
 
 Enable conversion of pure markdown on paste.
