--- a/modules/ROOT/pages/7.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.1-release-notes.adoc
@@ -283,6 +283,16 @@ For more information on bundling with {productname}, see xref:bundling-plugins.a
 == Bug fixes
 
 {productname} {release-version} also includes the following bug fixes:
+
+=== Video and audio elements could not be played on Safari.
+// #TINY-10774
+
+In earlier versions of {productname}, a problem occurred when users inserted a video or media element into a {productname} document while using Safari as the host browser. The issue caused media files to be unplayable in Safari.
+
+{productname} {release-version} resolves this problem by preventing events from propagating outside of the video element, which previously caused the playback issue.
+
+With this fix, users can now play video and audio elements on Safari without any issues.
+
 === Open link context menu action did not work with selection surrounding a link.
 
 In earlier versions of {productname}, the `Open link` context menu action did not work when a link was part of a larger text selection. This meant that selecting a text block containing a link and then choosing `Open link` from the context menu would not result in any action.
