--- a/modules/ROOT/pages/ai-azure.adoc
+++ b/modules/ROOT/pages/ai-azure.adoc
@@ -1,8 +1,8 @@
-= Azure OpenAI Service integration guide
+= Azure AI integration guide
 :pluginname: AI Assistant
 :plugincode: ai
 :plugincategory: premium
-:navtitle: Azure OpenAI Service integration guide
+:navtitle: Azure AI integration guide
 :description_short: {pluginname} with Azure OpenAI Service
 :description: A guide for integrating {pluginname} plugin using Azure OpenAI Service.
 :keywords: example, demo, custom, plugin, ai, assistant, guide, azure, openai, service
@@ -15,17 +15,13 @@ This guide provides instructions for integrating the {pluginname} plugin using t
 
 Azure OpenAI Service provides REST API access to OpenAI's language models with Azure specific features such as private networking, regional availability, and responsible AI content filtering.
 
-Azure OpenAI co-develops the APIs with OpenAI. Therefore, the following examples should be compatible if using Azure OpenAI REST API endpoints or OpenAI API endpoints.
-
 To learn more about the difference between string and streaming responses, see xref:ai.adoc#the-respondwith-object[The `respondWith` object] on the plugin page.
 
 == Prerequisites
 
 Before beginning, make sure an OpenAI model has been set up in Azure. The model's endpoint URL and API key are required for integration. For more information, see the https://learn.microsoft.com/en-us/azure/ai-services/openai/chatgpt-quickstart?tabs=command-line%2Cpython-new&pivots=rest-api[Quick Start Guide] provided by Azure.
 
-A proxy is required if making `fetch` calls directly to the Azure OpenAI REST API as otherwise CORS errors arise. In general, using a proxy is highly recommended even if network errors did not occur. See the xref:ai-proxy.adoc[AI Proxy Server reference guide] for information on how to setup a proxy server for use with the {pluginname}.
-
-NOTE: The xref:ai-proxy.adoc[AI Proxy Server reference guide] is, as its name notes, a reference. There is no single proxy server setup that is right or correct for all circumstances and other setups may be better for your use-case.
+include::partial$misc/admon-ai-proxy.adoc[]
 
 == String response
 
@@ -43,7 +39,7 @@ const ai_request = (request, respondWith) => {
     method: 'POST',
     headers: {
       'Content-Type': 'application/json',
-      'Authorization': `Bearer ${AZURE_OPENAI_API_KEY}`
+      'api-key': AZURE_OPENAI_API_KEY
     },
     body: JSON.stringify({
       temperature: 0.7,
@@ -142,7 +138,7 @@ tinymce.init({
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
-          'Authorization': `Bearer ${AZURE_OPENAI_API_KEY}`
+          'api-key': AZURE_OPENAI_API_KEY
         },
         body: JSON.stringify(requestBody)
       };
