DOC-2406: Update default emoticons_images_url

--- a/modules/ROOT/partials/configuration/emoticons_images_url.adoc
+++ b/modules/ROOT/partials/configuration/emoticons_images_url.adoc
@@ -7,7 +7,7 @@ By default, this option loads the required image _assets_ from the Twemoji CDN. 
 
 *Type:* `+String+`
 
-*Default value:* `+'https://twemoji.maxcdn.com/v/13.0.1/72x72/'+`
+*Default value:* `+'https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/'+`
 
 === Example: using `+emoticons_images_url+`
 
