--- a/modules/ROOT/pages/ai-azure.adoc
+++ b/modules/ROOT/pages/ai-azure.adoc
@@ -19,7 +19,7 @@ To learn more about the difference between string and streaming responses, see t
 
 == Prerequisites
 
-Before beginning, make sure an OpenAI model has been set up in Azure. The model's endpoint URL and API key are required for integration. For more information, see the https://learn.microsoft.com/en-us/azure/ai-services/openai/chatgpt-quickstart?tabs=command-line%2Cpython-new&pivots=rest-api[Quick Start Guide] provided by Azure.
+Before beginning, make sure an OpenAI model has been set up in Azure. The model's endpoint URL and API key are required for integration. For more information, see the https://learn.microsoft.com/en-us/azure/ai-services/openai/chatgpt-quickstart?tabs=command-line%2Cpython-new&pivots=rest-api[Quick Start Guide^] provided by Azure.
 
 include::partial$misc/admon-ai-proxy.adoc[]
 
