--- a/modules/ROOT/pages/7.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.1-release-notes.adoc
@@ -155,10 +155,9 @@ The events include:
 |A11ycheckShowDetails |Fired when the `Click for more info` button is pressed
 |===
 
-[NOTE]
-These events will only be visible within the developer console when each `event` is triggered.
-
 For information on the **Accessibility Checker** plugin, see: xref:a11ychecker.adoc[Accessibility Checker].
+
+For information on handling events in {productname}, see: xref:events.adoc[Events].
 
 ==== <Premium plugin name 1 change 1>
 
