--- a/modules/ROOT/pages/7.1.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.1.1-release-notes.adoc
@@ -160,6 +160,13 @@ For information on using Enhanced Skins & Icon Packs, see: xref:enhanced-skins-a
 
 // CCFR here.
 
+=== Insert/Edit image dialog lost focus after the image upload completed.
+// #TINY-10885
+
+Previously, when using the TinyMCE editor's `Insert/Edit image` dialog and uploading an image from the 'Upload' tab, the focus would move outside of the dialog after the image was successfully uploaded. As a consequence, users were unable to navigate within the dialog using the tab key.
+
+In {productname} {release-version}, this issue has been fixed. Now, the focus remains inside the `Insert/Edit image` dialog after uploading an image, allowing users to navigate within the dialog using the keyboard as expected.
+
 
 [[security-fixes]]
 == Security fixes
