--- a/modules/ROOT/pages/7.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.1-release-notes.adoc
@@ -69,10 +69,9 @@ include::partial$misc/admon-no-functionality-changes-in-updated-server-side-comp
 [[new-premium-plugin]]
 == New Premium plugin
 
-The following new Premium plugin was released alongside {productname} 7.0.
+The following new Premium plugin was released alongside {productname} 7.1.
 
-
-[[math-equations]]
+[[math]]
 === Math
 
 The new Premium plugin, **Math**, provides a way for users to insert complex formulas.
