--- a/modules/ROOT/pages/7.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.1-release-notes.adoc
@@ -140,6 +140,36 @@ For information on the **Accessibility Checker** plugin, see: xref:a11ychecker.a
 
 For information on handling events in {productname}, see: xref:events.adoc[Events].
 
+=== Revision History
+
+The {productname} {release-version} release includes an accompanying release of the **Revision History** premium plugin.
+
+**Revision History** includes the following improvement.
+
+{productname} {release-version} introduces the new `revisionhistory_diff_classes` option. This option allows the integrator to customize the CSS classes applied to change annotations in the Revision History feature. This configuration works in conjunction with the `revisionhistory_css_url` option, which provides a way for integrators to define custom styles for changes such as additions, removals, and modifications.
+
+[NOTE]
+The default configuration uses predefined class names (tox-revisionhistory__annotation--added, tox-revisionhistory__annotation--removed, and tox-revisionhistory__annotation--modified), which can be overridden with custom classes to suit the specific style requirements, such as the below example.
+
+.Example
+[source, js]
+----
+tinymce.init({
+  selector: 'textarea',  // change this value according to your HTML
+  plugins: 'revisionhistory',
+  toolbar: 'revisionhistory',
+  revisionhistory_css_url: './revisionhistory.css', //required
+  revisionhistory_diff_classes: {
+    addition: 'added',
+    removal: 'removed',
+    modification: 'modified'
+  },
+  revisionhistory_fetch: () => Promise.resolve([])
+});
+----
+
+For information on the **Revision History** plugin, see: xref:revisionhistory.adoc[Revision History].
+
 
 [[improvements]]
 == Improvements
